--- a/index.html
+++ b/index.html
@@ -11,32 +11,41 @@
 
   <body>
     <div class="container">
-      <nav class="header">
-        <h1>WhoIsIt</h1>
+      <nav id="navid" class="header">
+        <h1 class="title"></h1>
       </nav>
       <div class="pictureholder">
-        <img id="img" src="" alt="SWAG ERROR!" />
+        <div></div>
+        <div class="img"><img id="img" src="" alt="SWAG ERROR!" /></div>
         <div class="overlay">
           <div class="hint">HINT!!!</div>
         </div>
+        <div>
+          <form class="questions" method="post">
+            <fieldset id="questionBox">
+              <legend>Select Answer</legend>
+              <li>
+                <label>
+                  <input class="option1" type="radio" name="radio" />
+                </label>
+                <span class="option1-label"></span>
+              </li>
+              <li>
+                <label>
+                  <input class="option2" type="radio" name="radio" />
+                </label>
+                <span class="option2-label"></span>
+              </li>
+              <li>
+                <label>
+                  <input class="option3" type="radio" name="radio" />
+                </label>
+                <span class="option3-label"></span>
+              </li>
+            </fieldset>
+          </form>
+        </div>
       </div>
-      <form class="questions" method="post">
-        <fieldset id="questionBox">
-          <legend>Select Answer</legend>
-          <li>
-            <label> <input class="option1" type="radio" name="radio" /> </label>
-            <span class="option1-label"></span>
-          </li>
-          <li>
-            <label> <input class="option2" type="radio" name="radio" /> </label>
-            <span class="option2-label"></span>
-          </li>
-          <li>
-            <label> <input class="option3" type="radio" name="radio" /> </label>
-            <span class="option3-label"></span>
-          </li>
-        </fieldset>
-      </form>
     </div>
     <footer class="cashmone">©ash mone</footer>
   </body>
