--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WhoIsIt</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="app.js"></script>
   </head>
 
@@ -15,7 +23,8 @@
         <h1 class="title"></h1>
       </nav>
       <div class="pictureholder">
-        <div></div>
+        <div class="counter">Correct: <span class="correctCount"></span></div>
+        <div class="counter2">Wrong: <span class="wrongCount"></span></div>
         <div class="img"><img id="img" src="" alt="SWAG ERROR!" /></div>
         <div class="overlay">
           <div class="hint">HINT!!!</div>
